# qa_agent

./: .env  .env.example  .gitignore  pyproject.toml  pytest.ini  sample_brd_order_management.txt  sample_frd_order_management.txt  test_executor.py  test_request.py  test_results.json
alembic/: env.py
alembic/versions/: e4556fa1ca32_init_local_sqlite_test_runs_environment_.py
generated_tests/: conftest.py  manifest.json  test_REQ_001_user_auth.py  test_REQ_002_product_listing.py  test_REQ_003_cart_management.py  test_REQ_004_order_placement.py  test_REQ_005_security_etl.py
qa_agent_ui/: README.md  requirements.txt  streamlit_app.py
src/qa_agent/: config.py  main.py  orchestrator.py
src/qa_agent/agents/: classifier_agent.py  coder.py  coder_agent.py  planner.py  reporter_agent.py  reviewer.py
src/qa_agent/db/: session.py
src/qa_agent/db/tables/: __init__.py  audit_logs.py  bug_reports.py  credentials.py  environments.py  notifications.py  pr_reviews.py  qa_metrics.py  requirements.py  test_cases.py  test_runs.py
src/qa_agent/models/: inputs.py  outputs.py  state.py
src/qa_agent/routers/: bugs.py  metrics.py  requirements.py  streaming.py  test_cases.py  test_runs.py  webhooks.py
src/qa_agent/tools/: environment.py  executor.py  git_analyzer.py  integration.py  jira.py  script_writer.py  vault.py
