[tool.poetry]
name = "qa-agent"
version = "0.3.0"
description = "FastAPI QA Agent Backend built with Pydantic AI"
authors = ["QA Team <qa@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
pydantic-ai = "^0.0.14"
openai = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic-settings = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
