[project]
name = "qa-agent"
version = "0.3.0"
description = "FastAPI QA Agent Backend built with Pydantic AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Backend
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    
    # DB
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.2.0",
    
    # UI Dashboard
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "pandas>=2.0.0",
    
    # QA Integrations & Testing
    "databricks-sql-connector>=3.0.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "locust>=2.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-json-report>=1.5.0",
    "pytest-html>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
[tool.hatch.build.targets.wheel]
packages = ["src/qa_agent"]
